# rs_n_cm

./: .gitignore  mod.patch  pyproject.toml  requirements.txt
Preprocess/exp1/: Choosed_plot.py  __init__.py  plane_data_utils.py  plane_plot_utils.py  s1_Outline_process.py  s2_Outline_gui.py  s3_Plane_process.py  s4_Choosed_plane.py  s5_Rebuild.py
Preprocess/exp2/: Choosed_plot.py  Choosed_plot_Html.py  Choosed_plot_mpl.py  Cursves_plot copy.py  Cursves_plot.py  Plane_plot.py  __init__.py  s1_Outline_process.py  s2_Outline_gui.py  s3_Curve_process.py  s4_Choosed_curve.py  s5_Rebuild.py  set_dir.py
notebook/: e1_sim_plot.ipynb  e2_sim_plot.ipynb
scripts/: e1_process_run.py  e2_process_run.py  exp_process_run.py
src/: processor.py
src/conversor/: Npy_2_Xdmf.py  Odb_Npz_Converter.py  Odb_Npz_Parameters.py  __init__.py
src/element_process/: Elements_main.py  Elements_plot.py  __init__.py  s1_Ele_Extractor.py  s2_RE_ExnCon.py  s2_RE_ExnCon2.py  s2_RE_Field.py  s3_RE_Interpolator.py
src/exp_process/: importations.py
src/exp_process/core/: cleaner.py  comparison.py  fitter.py  loader.py  mesher.py  operations.py  parsers.py  rebuilder.py  segmenter.py  transformer.py
src/exp_process/gui/: viewer.py
src/exp_process/pipeline/: base.py  comparison.py  curve.py  surface.py
src/exp_process/utils/: io.py
src/simulations/: CMA2_Main.py  REA2_Main.py  cm2_main.py  cm_main.py  rs_main.py
src/simulations/_inp_modules/: __init__.py  dataclasses.py  imports.py  modifier.py  parser.py  process.py  reader.py  runners.py  writer.py
src/simulations/_proof/: sim.py  (+7 more)
(+71 files in other folders)
